Logo moved to right side

--- a/styles/home.css
+++ b/styles/home.css
@@ -5,6 +5,7 @@ div#home-page {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: row-reverse;
 }
 
 div#home-page form {
