--- a/styles/home.css
+++ b/styles/home.css
@@ -14,12 +14,19 @@ div#home-page {
     }
 
     div#home-page img#logo-img {
-        margin-left: 0px;
+        width: 200px !important;
+        margin-left: 0px !important;
+    }
+
+    div#home-page form {
+        padding: 25px 20px !important;
     }
 }
 
 div#home-page img#logo-img {
+    width: 300px;
     margin-left: 60px;
+    margin-top: 30px;
 
     /* initial values */
     opacity: 0;
