--- a/styles/home.css
+++ b/styles/home.css
@@ -13,9 +13,15 @@ div#home-page {
         flex-direction: column;
     }
 
-    div#home-page img#logo-img {
-        width: 200px !important;
+    div#home-page div#content {
+        width: 340px !important;
         margin-left: 0px !important;
+    }
+
+
+    div#home-page div#content img#logo-img {
+        margin: 50px auto;
+        display: block;
     }
 
     div#home-page form {
@@ -23,21 +29,40 @@ div#home-page {
     }
 }
 
+/* ================== CONTENT ================== */
+
 div#home-page img#logo-img {
+    /* dimension */
     width: 300px;
-    margin-left: 60px;
+}
+
+div#home-page div#content {
+    /* dimensions */
+    max-width: 450px;
+    width: 100%;
+    margin-left: 30px;
     margin-top: 30px;
-
-    /* initial values */
-    opacity: 0;
     margin-bottom: 80px;
-
+    /* content */
+    opacity: 0;
     /* animation */
     transition: opacity 800ms ease, margin-bottom 800ms ease;
     -o-transition: opacity 800ms ease, margin-bottom 800ms ease;
     -ms-transition: opacity 800ms ease, margin-bottom 800ms ease;
     -moz-transition: opacity 800ms ease, margin-bottom 800ms ease;
     -webkit-transition: opacity 800ms ease, margin-bottom 800ms ease;
+}
+
+div#home-page div#content h3 {
+    font-weight: normal;
+    padding: 10px 0px 5px;
+    color: var(--color-primary);
+    font-size: 12pt;
+}
+
+div#home-page div#content p {
+    color: var(--color-secondary);
+    font-size: 10pt;
 }
 
 div#home-page form {
