--- a/styles/home.css
+++ b/styles/home.css
@@ -65,6 +65,8 @@ div#home-page div#content p {
     font-size: 10pt;
 }
 
+/* ================== FORM ================== */
+
 div#home-page form {
     /* content */
     display: flex;
