--- a/styles/home.css
+++ b/styles/home.css
@@ -19,7 +19,7 @@ div#home-page {
     }
 
 
-    div#home-page div#content img#logo-img {
+    div#home-page div#content div#logo-img {
         margin: 50px auto;
         display: block;
     }
@@ -31,7 +31,7 @@ div#home-page {
 
 /* ================== CONTENT ================== */
 
-div#home-page img#logo-img {
+div#home-page div#logo-img {
     /* dimension */
     width: 300px;
 }
